header.ejs fix navbar

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -26,14 +26,14 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="/">Current weather</a></li>
-        <li><a href="/">Weather forecast</a></li>
+<!--         <li><a href="/">Current weather</a></li> -->
+<!--         <li><a href="/">Weather forecast</a></li> -->
       </ul>
       <form class="navbar-form navbar-left" action="/weathernow/" method="GET">
         <div class="form-group">
-          <input type="text" class="form-control" name="city" placeholder="Current weather">
+          <input type="text" class="form-control" name="city" placeholder="City name">
         </div>
-        <button type="submit" class="btn btn-default">Submit</button>
+        <button type="submit" class="btn btn-default">Find</button>
       </form>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
